# Module-Piscine-Python

./: README.md
Module_00/ex0/: ft_hello_garden.py
Module_00/ex1/: ft_plot_area.py
Module_00/ex2/: ft_harvest_total.py
Module_00/ex3/: ft_plant_age.py
Module_00/ex4/: ft_water_reminder.py
Module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Module_00/ex6/: ft_garden_summary.py
Module_00/ex7/: ft_seed_inventory.py
Module_01/ex0/: ft_garden_intro.py
Module_01/ex1/: ft_garden_data.py
Module_01/ex2/: ft_plant_growth.py
Module_01/ex3/: ft_plant_factory.py
Module_01/ex4/: ft_garden_security.py
Module_01/ex5/: ft_plant_types.py
Module_01/ex6/: ft_garden_analytics.py
Module_02/ex0/: ft_first_exception.py
Module_02/ex1/: ft_different_errors.py
Module_02/ex2/: ft_custom_errors.py
Module_02/ex3/: ft_finally_block.py
Module_02/ex4/: ft_raise_errors.py
Module_02/ex5/: ft_garden_management.py
Module_03/ex0/: ft_command_quest.py
Module_03/ex1/: ft_score_analytics.py
Module_03/ex2/: ft_coordinate_system.py
Module_03/ex3/: ft_achievement_tracker.py
Module_03/ex4/: ft_inventory_system.py
Module_03/ex5/: ft_data_stream.py
Module_03/ex6/: ft_analytics_dashboard.py
Module_04/ex0/: ft_ancient_text.py
Module_04/ex1/: ft_archive_creation.py
Module_04/ex2/: ft_stream_management.py
Module_04/ex3/: ft_vault_security.py
Module_04/ex4/: ft_crisis_response.py
Module_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Module_08/ex1/: loading.py  pyproject.toml
(+33 files in other folders)
